--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Git Learning</title>
   </head>
   <body>
-    <h1>Creating a local repo</h1>
-    <p>This is a new repo</p>
+    <h1>Hello Git & GitHub</h1>
   </body>
 </html>
