--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
   </head>
   <body>
     <h1>Hello Git & GitHub</h1>
+    <h2>Current branch: feature1</h2>
+    <p>This is a new feature</p>
+    
   </body>
 </html>
